Changing button text on shift+hover / css fix

--- a/src/contentscript/contentscript.sass
+++ b/src/contentscript/contentscript.sass
@@ -30,4 +30,3 @@ button.pbExtensionOldSetupCookieButton
 
 button.pbExtensionNewSetupCookieButton
   min-width:            auto
-  margin-right:         -.5rem
